--- a/css/style.css
+++ b/css/style.css
@@ -35,21 +35,49 @@ p{
 .menu-texto{
     color: white;
     float: right;
-    font-size: 24px;
+    font-size: 20px;
+    margin-top: 25px;
+}
+
+.div-erro {
+  border: 1px solid rgba(241, 6, 6, 0.81);
+    background-color: rgba(220, 17, 1, 0.16);
+    box-shadow: 0px 0px 2px #ff0303;
+    color: #ff0303;
+    text-shadow: 2px 1px #00040a;
+  transition:0.5s;
+  cursor:pointer;
+}
+
+
+.hidden {
+    visibility: hidden;
 }
 
 #input-endereco{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 460px;
-    height: 28px;
-    margin-bottom: 24px;
-    border-radius: 10px;
+    color: #333;
+    font-size: 1.0rem;
+    margin: 0 auto;
+    padding: 0.7rem 0.7rem;
+    border-radius: 0.2rem;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    width: 60%;
+    transition: all 0.3s;
 }
 
 #botao{
-    width: 210px;
-    height: 28px;
+    font-family: Hack, monospace;
+    background: #f36818;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 18px;
+    padding: 0.5rem;
+    border: 0;
+    transition: all 0.5s;
     border-radius: 10px;
+    width: auto;
+    position: relative;
 }
 
 
@@ -88,4 +116,11 @@ ul li h2{
 
 #footer-right{
     float: right;
+}
+
+#erro_api {
+    font-size: 14px;
+    font-weight: bold;
+    color: red;
+    text-align: center;
 }
